# firstprj

./: README.md  pyproject.toml
src/firstprj/: crew.py  main.py
src/firstprj/config/: agents.yaml
