[project]
name = "firstprj"
version = "0.1.0"
description = "firstprj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
firstprj = "firstprj.main:run"
run_crew = "firstprj.main:run"
train = "firstprj.main:train"
replay = "firstprj.main:replay"
test = "firstprj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
